k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexora-cx
  namespace: nexora-cx
  labels:
    app.kubernetes.io/name: nexora-cx
    app.kubernetes.io/part-of: bpo-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: nexora-cx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nexora-cx
        app.kubernetes.io/part-of: bpo-website
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
      containers:
        - name: website
          image: rahultiple31/nexora-cx:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
