k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexora-cx
  namespace: nexora-cx
  labels:
    app.kubernetes.io/name: nexora-cx
    app.kubernetes.io/part-of: bpo-website
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: nexora-cx
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
